# master_project

./: README.md
devel/: .catkin  local_setup.sh
devel/include/affordance_experiment/: PerformExperiment.h  PerformExperimentRequest.h  PerformExperimentResponse.h  RecordVisuals.h  RecordVisualsRequest.h  RecordVisualsResponse.h
devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
devel/lib/pkgconfig/: affordance_experiment.pc  arq_gazebo.pc  ezgripper_driver.pc  maria_moveit_config.pc  ur10_moveit_config.pc  ur3_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
src/affordance_experiment/: CMakeLists.txt  package.xml
src/affordance_experiment/bn/: bde.r  bde_2d.r  fully_connected.r  fully_connected_2d.r  pca.r  pca_2d.r  preprocess_final.py  scatter_plot.py
src/affordance_experiment/launch/: data_collection.launch
src/affordance_experiment/models/: bone.dae  bone.urdf  bone.urdf.xacro  cone.dae  cone.urdf  cube.urdf  cube.urdf.xacro  cylinder.urdf  cylinder.urdf.xacro  fork.dae  fork.urdf  fork.urdf.xacro  fork1.dae  l_stick.dae  l_stick.urdf  l_stick.urdf.xacro  pyramid.dae  pyramid.urdf  sphere.dae  sphere.urdf  sphere.urdf.xacro  (+6 more)
src/affordance_experiment/visuals/: CMakeLists.txt  geom_utils.h  measures.h  pc_features.cpp  rgb_features.py  types.h
src/arq_gazebo/: CMakeLists.txt  package.xml
src/maria_moveit_config/: CMakeLists.txt
(+112 files in other folders)
