cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(VISUAL_FEATURES)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pc_features pc_features.cpp)
target_link_libraries(pc_features ${PCL_LIBRARIES})
